--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ project-folder/
             <p>Website ini berisi informasi biodata dan portofolio sederhana.</p>
         </div>
         <div class="right">
-            <img src="photo.jpg" alt="Foto Profil">
+            <img src="photocv.jpg" alt="Foto Profil">
         </div>
     </section>
 
@@ -73,15 +73,15 @@ project-folder/
         <h2>Portofolio</h2>
         <div class="cards">
             <div class="card">
-                <img src="photo1.jpg" alt="Project 1">
+                <img src="proyek1.png" alt="Project 1">
                 <p>Project 1<br>Desain Website</p>
             </div>
             <div class="card">
-                <img src="photo2.jpg" alt="Project 2">
+                <img src="Proyek2.png" alt="Project 2">
                 <p>Project 2<br>Website Sekolah</p>
             </div>
             <div class="card">
-                <img src="photo3.jpg" alt="Project 3">
+                <img src="proyek3.png" alt="Project 3">
                 <p>Project 3<br>Dashboard Aplikasi</p>
             </div>
         </div>
